# setup

./: .gitignore  .markdownlint.json  README.md  doc.go  go.mod  go.sum  main.go  pyproject.toml
cli/: __main__.py  printer.py
cmd/: checks.go  config.go  main.go  packages.go  printer.go  secrets.go  sync.go  utils.go
config/: omp.json  tool-versions  zsh_secrets.templ  zshrc
config/alacritty/: alacritty.toml
config/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf
config/nvim/: init.lua
config/nvim/colors/: dracula-recharged.lua  iced-lightning-dark.lua  iced-lightning-light.lua  iced-lightning.lua
config/nvim/lua/: health.lua
config/nvim/lua/cheatsheet/: README.md  config.lua  init.lua  keymaps.lua  ui.lua
config/nvim/lua/config/: autocmds.lua  keymaps.lua  options.lua
config/nvim/lua/dracula-recharged/: README.md  colors.lua  config.lua  highlights.lua  init.lua
config/nvim/lua/iced-lightning/: README.md  colors.lua  config.lua  highlights.lua  init.lua
config/nvim/lua/plugins/: blink-cmp.lua  cheatsheet.lua  conform.lua  debug.lua  init.lua  lint.lua  lspconfig.lua  neo-tree.lua  telescope.lua  treesitter.lua  which-key.lua
config/rofi/: colors.rasi
config/waybar/: config.jsonc  style.css
config/zathura/: zathurarc
doc/: GUIDE.md  README.md  hyprland.md  plugin-notes.md  zathura.md
